@@ -278,3 +278,4 @@
     - Miglioramento "Copia in più lingue".
     - Fixed FILESUBTYPE of VERSIONINFO.
     - Made "~" the backup suffix rather than "-old".
+    - Renamed "Replacing Dialog Fonts..." as "Dialog font substitutes..."
