@@ -621,3 +621,4 @@
         「複数の言語へ複製」を改良。
         VERSIONINFO の FILESUBTYPE を修正。
         「-old」ではなく「~」をバックアップサフィックスにする。
+        「ダイアログフォントの置き換え...」を「ダイアログフォント代替...」に改名。
