@@ -121,7 +121,7 @@ IDR_MAINMENU MENU
         MENUITEM "Use Microsoft Message &Table", ID_USEMSMSGTBL
         MENUITEM SEPARATOR
         MENUITEM "&Encodage de l'élément de ressource...", ID_ENCODING
-        MENUITEM "Remplacement des polices de dialogue...", ID_REPLACE_DIALOG_FONTS
+        MENUITEM "Dialog &font substitutes...", ID_DIALOG_FONT_SUBSTITUTES
         MENUITEM SEPARATOR
         MENUITEM "Rafraîchir", ID_REFRESHALL
     }
