@@ -121,7 +121,7 @@ IDR_MAINMENU MENU
         MENUITEM "Microsoft 메시지 테이블 사용(&T)", ID_USEMSMSGTBL
         MENUITEM SEPARATOR
         MENUITEM "리소스 항목의 인코딩(&E)...", ID_ENCODING
-        MENUITEM "대화 상자 글꼴 바꾸기(&F)...", ID_REPLACE_DIALOG_FONTS
+        MENUITEM "Dialog &font substitutes...", ID_DIALOG_FONT_SUBSTITUTES
         MENUITEM SEPARATOR
         MENUITEM "새로 고침(&F)", ID_REFRESHALL
     }
