@@ -121,7 +121,7 @@ IDR_MAINMENU MENU
         MENUITEM "Use Microsoft Message &Table", ID_USEMSMSGTBL
         MENUITEM SEPARATOR
         MENUITEM "&Encoding of resource item...", ID_ENCODING
-        MENUITEM "Replacing Dialog &Fonts...", ID_REPLACE_DIALOG_FONTS
+        MENUITEM "Dialog &font substitutes...", ID_DIALOG_FONT_SUBSTITUTES
         MENUITEM SEPARATOR
         MENUITEM "O&dśwież", ID_REFRESHALL
     }
