@@ -121,7 +121,7 @@ IDR_MAINMENU MENU
         MENUITEM "Использовать &таблицу сообщений Microsoft", ID_USEMSMSGTBL
         MENUITEM SEPARATOR
         MENUITEM "&Кодировка ресурсного элемента...", ID_ENCODING
-        MENUITEM "Заменить Диалоговые &Шрифты...", ID_REPLACE_DIALOG_FONTS
+        MENUITEM "Dialog &font substitutes...", ID_DIALOG_FONT_SUBSTITUTES
         MENUITEM SEPARATOR
         MENUITEM "О&бновить", ID_REFRESHALL
     }
